Remove pasta antiga UdemyRepo

--- a/Udemy/LIstaFrutas.html
+++ b/Udemy/LIstaFrutas.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Listas de Frutas</title>
 </head>
 
-<body style="color: blue; font-size: 18px;">
+<body style="color: #0000ff; font-size: 18px;">
     <h2>Listas não ordenadas</h2>
     <ul>
         <li>Maçã</li>
         <li>Banana</li>
         <li>Uva</li>
         <li>Abacate</li>
-        <hr style="border: 3px solid blue;width: 80; margin-left: 3%; margin-right: 3%;">
+        <hr style="border: 3px solid #0000ff;width: 80; margin-left: 3%; margin-right: 3%;">
     </ul>
     <br>
     <h2>Lista Ordenadas</h2>
@@ -23,7 +23,7 @@
         <li>Banana</li>
         <li>Uva</li>
         <li>Abacate</li>
-        <hr style="border: 3px solid blue;margin-left: 10%; margin-right: 10%;">
+        <hr style="border: 3px solid #0000ff;margin-left: 10%; margin-right: 10%;">
     </ol>
     <h2>LIsta de Definições</h2>
     <dl>
@@ -36,7 +36,7 @@
         <dt>Abacate</dt>
         <dd>O Abacate é o fruto comestível do abacateiro</dd>
     </dl>
-    <hr style="border: 3px solid blue; margin-left: 18%; margin-right: 18%;">
+    <hr style="border: 3px solid #0000ff; margin-left: 18%; margin-right: 18%;">
 </body>
 
 </html>
