--- a/Udemy/pizza.html
+++ b/Udemy/pizza.html
@@ -1,43 +1,76 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizza</title>
-
+    <title>Pizzaria dos pobi</title>
 </head>
 
-<body style="color: brown; font-family: Verdana; margin-right: 5%; margin-left: 5%;">
+<body style="margin-left:3%; margin-right:3%" text="#800000">
+    <div><img src="topo1 copy.jpg" align="top" alt="topo" width="100%" height="100vh" />
+        <br />
+        <br />
+        <font face="arial" size="4"><strong>Pizza</strong></font>
+        <br /><br />
+    </div>
+    <hr size="3" width="100%" color="#800000" />
+    Pizza é uma preparação culinária que consiste em um disco de massa fermentada
+    de farinha de trigo, regado com molho de tomates e coberto com ingredientes
+    variados que normalmente incluem algum tipo de queijo, carnes preparadas ou defumadas
+    e ervas, normalmente orégano ou manjericão, tudo assado no forno.
+    <br /><br />
+    <font face="arial" size="4"><strong>Alguns tipos e sabores</strong></font>
+    <br /><br />
+    <hr size="3" width="100%" color="#800000" />
+    A variedade de coberturas que se pode colocar sobre uma pizza é quase infinita,
+    entretanto, algumas preparações são tradicionais e têm fiéis seguidores:
 
-    <h1 style="font-family: Arial;">Pizza</h1>
-    <hr style="border: 1px solid brown;">
-    <p>Pizza é uma preparação culinária que consiste em um disco de massa fermentada de farinha de trigo, regada com
-        <br>
-        molho de tomate e coberto com igredientes variados que normalmente incluem algum tipo de queijo, carnes <br>
-        preparadas ou defumadas e ervas, normalmente orégano ou manjericão, tudo assado me forno
-    </p> <br>
-    <h3 style="font-family: Arial;">Alguns tipos e sabores</h3>
-    <hr style="border: 1px solid brown;">
-    <p>A variedade de corbetura que se pode colocar sobre uma pizza é quase infinita, entretanto, algumas
-        preparações são tradicionais e têm fiéis seguidores; <br>
-        Margherita <br>
-        Mussarela <br>
-        Portuguesa <br>
-        Calabresa <br>
-        Toscana <br>
-        Pepperoni <br>
-        Quatro queijos <br>
-        Pomodoro <br>
-    </p>
-    <h3 style="font-family: Arial;">Fontes</h3>
-    <hr style="border: 1px solid brown;">
-    <p>
-        http://pt.wikipedia.org/wiki/Pizza <br>
-        http://www.pizza.it <br>
-        http://en.wikipedia.org/wiki/History_of_pizza <br>
-    </p>
-    <p style="text-align: center; font-family: Verdana;">www.pizzaonline.com.br</p>
+    <ul type="square">
+        <li> <img src="margherita_peq.jpg" border="2px" vspace="5px" align="middle" alt="margherita_peq" />
+            <font face="arial" size="2"> <strong>Margherita</strong></font>
+        </li>
+
+        <li> <img src="mussarela_peq.jpg" border="2px" vspace="5px" align="middle" alt="mussarela_peq" />
+            <font face="arial" size="2"><strong>Mussarela</strong></font>
+        </li>
+
+        <li> <img src="portuguesa_peq.jpg" border="2px" vspace="5px" align="middle" alt="portuguesa_peq" />
+            <font face="arial" size="2"><strong>Portuguesa</strong></font>
+        </li>
+
+        <li> <img src="calabresa_peq.jpg" border="2px" vspace="5px" align="middle" alt="calabresa_peq" />
+            <font face="arial" size="2"><strong>Calabresa</strong></font>
+        </li>
+
+        <li> <img src="california_peq.jpg" border="2px" vspace="5px" align="middle" alt="california_peq" />
+            <font face="arial" size="2"><strong>Califórnia</strong></font>
+        </li>
+
+        <li> <img src="pepperoni_peq.jpg" border="2px" vspace="5px" align="middle" alt="pepperoni_peq" />
+            <font face="arial" size="2"><strong>Pepperoni</strong></font>
+        </li>
+
+        <li> <img src="quatro_queijos_peq.jpg" border="2px" vspace="5px" align="middle" alt="quatro_queijos_peq" />
+            <font face="arial" size="2"><strong>Quatro queijos</strong></font>
+        </li>
+
+        <li> <img src="bacon_peq.jpg" border="2px" vspace="5px" align="middle" alt="quatro_queijos_peq" />
+            <font face="arial" size="2"><strong>Bacon</strong></font>
+        </li>
+    </ul>
+
+    <font face="arial" size="3"><strong>Fontes</strong></font>
+    <ol type="1">
+        <li> <a href="https://pt.wipipedia.org/wiki/Pizza" style="color:brown">https://pt.wipipedia.org/wiki/Pizza</a>
+        </li>
+        <li> <a href="https://www.pizza.it" style="color:brown">https://www.pizza.it</a> </li>
+        <li> <a href="https://en.wikipedia.org/wiki/History_of_pizza"
+                style="color:brown">https://en.wikipedia.org/wiki/History_of_pizza</a> </li>
+    </ol>
+
+    <center> w w w . p i z z a o n l i n e . c o m . b r</center>
 </body>
 
 </html>
